add: about page output data

--- a/data/blog/oos.mdx
+++ b/data/blog/oos.mdx
@@ -2,7 +2,7 @@
 title: オブジェクト指向設計について学ぶ
 date: '2025-10-30'
 tags: ['オブジェクト指向', '設計']
-draft: false
+draft: true
 summary: オブジェクト指向設計の基本概念と手続き型プログラミングとの違い、クラス設計について
 ---
 
